refactor: Rename CacheTriggerContent.java to PendingTriggerService.java COOEE-797
- Delete various pending trigger actions except a few.
- Rename various methods, room DB column names.